--- a/ik_constraint/CMakeLists.txt
+++ b/ik_constraint/CMakeLists.txt
@@ -41,6 +41,7 @@ add_library(${PROJECT_NAME}
   src/AngularMomentumConstraint.cpp
   src/AngularMomentumLimitConstraint.cpp
   src/JointAngleConstraint.cpp
+  src/JointAngleFullConstraint.cpp
   src/JointLimitConstraint.cpp
   src/JointVelocityConstraint.cpp
   src/CollisionConstraint.cpp
